--- a/src/App.css
+++ b/src/App.css
@@ -239,11 +239,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-top: 0;
   padding: 260px 0 100px 0;
   /* background-image: url('./assets/img/banner-bg.png'); */
-  background-image: url('./assets/img/bg3.png');
+  background-image: url('./assets/img/banner-bg-new3.png');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
