--- a/src/App.css
+++ b/src/App.css
@@ -291,7 +291,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner button:hover svg {
   margin-left: 25px;
 }
-.banner img {
+.banner img, .banner .lottie {
   animation: updown 3s linear infinite;
 }
 @keyframes updown {
